[gd_scene load_steps=6 format=3 uid="uid://2qv47ukpm61l"]

[ext_resource type="Script" uid="uid://dql8huxj7fhg7" path="res://Scoreboard.gd" id="1_3b2b5"]
[ext_resource type="FontFile" uid="uid://dv6rxjsqf5lyn" path="res://PressStart2P.ttf" id="2_3b2b5"]
[ext_resource type="Texture2D" uid="uid://b4sjf2m1cjan6" path="res://Volume on.png" id="3_qui0h"]
[ext_resource type="Texture2D" uid="uid://d0kgbs2mpw5xv" path="res://Volume off.png" id="4_vrfts"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_qui0h"]
load_path = "res://.godot/imported/play button.png-e36d2542de47de281bed73fed9b90ff0.ctex"

[node name="UI" type="CanvasLayer"]
layer = 0

[node name="Scoreboard" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3b2b5")

[node name="Stacks" type="Label" parent="Scoreboard"]
layout_mode = 0
offset_left = 200.0
offset_top = 147.0
offset_right = 530.0
offset_bottom = 282.0
theme_override_colors/font_color = Color(1, 0.788235, 0.0823529, 1)
theme_override_constants/line_spacing = 25
theme_override_fonts/font = ExtResource("2_3b2b5")
theme_override_font_sizes/font_size = 55
text = "
0"
horizontal_alignment = 1

[node name="Stacks2" type="Label" parent="Scoreboard"]
layout_mode = 0
offset_left = 200.0
offset_top = 147.0
offset_right = 530.0
offset_bottom = 282.0
theme_override_colors/font_color = Color(1, 0.788235, 0.0823529, 1)
theme_override_constants/line_spacing = 25
theme_override_fonts/font = ExtResource("2_3b2b5")
theme_override_font_sizes/font_size = 55
text = "Stacks
"
horizontal_alignment = 1

[node name="HighScore" type="Label" parent="Scoreboard"]
layout_mode = 0
offset_left = 236.0
offset_top = 414.0
offset_right = 691.0
offset_bottom = 569.0
theme_override_constants/line_spacing = 25
theme_override_fonts/font = ExtResource("2_3b2b5")
theme_override_font_sizes/font_size = 35
text = "Highest
Stack
0"
horizontal_alignment = 2

[node name="Timer" type="Label" parent="Scoreboard"]
layout_mode = 0
offset_left = 289.0
offset_top = 300.0
offset_right = 689.0
offset_bottom = 405.0
theme_override_constants/line_spacing = 25
theme_override_fonts/font = ExtResource("2_3b2b5")
theme_override_font_sizes/font_size = 35
text = "Time
00:00.00"
horizontal_alignment = 2

[node name="PauseButtonContainer" type="VBoxContainer" parent="Scoreboard"]
layout_mode = 2
offset_left = 543.0
offset_top = 58.0
offset_right = 2298.0
offset_bottom = 871.0
scale = Vector2(0.09, 0.093)

[node name="PauseButton" type="TextureButton" parent="Scoreboard/PauseButtonContainer"]
layout_mode = 2
toggle_mode = true
texture_normal = SubResource("CompressedTexture2D_qui0h")

[node name="VolumeButtonContainer" type="VBoxContainer" parent="Scoreboard"]
layout_mode = 0
offset_left = 24.0
offset_top = 58.0
offset_right = 1779.0
offset_bottom = 871.0
scale = Vector2(0.087, 0.078)

[node name="VolumeButton" type="TextureButton" parent="Scoreboard/VolumeButtonContainer"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("3_qui0h")
texture_pressed = ExtResource("4_vrfts")
